--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 target/
+/.m2
 bin/
+/.classpath
+/.project
+/.settings
+
+/caches
+/local.properties
+.*.swp
+.DS_Store
+/src/main/liberty/config/server.env
+
+/mc-target
